src/components/header/header.css
.toolbar {
  background: rebeccapurple;
  height: 56px;
}

.toolbar__logo a {
  color: white;
  text-decoration: none !important;
  font-size: 1.5rem;
}

.toolbar__logo a:hover {
  color: white;
}
.toolbar-navigation-items ul {
  list-style: none;
  display: flex;
}

.nav-item {
  color: white;
}

